Fix title text alignment inside session modal

--- a/2025/index.css
+++ b/2025/index.css
@@ -1784,6 +1784,7 @@ a.session .name {
 #session-modal h4 {
   margin-top: 0;
   margin-bottom: 8px;
+  text-align: left;
 }
 
 #session-modal p {
